--- a/public/Felles.css
+++ b/public/Felles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: bisque;
-    border-style: solid  
+    border-style: solid;
     padding: 20px;
 }
 
